# pysequitur

./: .flake8  .gitignore  README copy.md  README.md  coverage.xml  docformat.sh  main.py  pyproject.toml  pyproject.toml.backup  pyproject.toml.bak  run.sh
pysequitur/: __init__.py  example2.py  file_sequence.py  sequence.py  sequence_parser.py
src/: coverage.xml
src/pysequitur/: __init__.py  _file_sequence.py  cli.py  crawl.py  file_sequence.py  file_sequence_bak.py  file_sequence_bak_bak.py  file_types.py  main.py  shot_extractor.py  simple_testing.py
tests/: conftest.py  test_FileSequence.py  test_FileSequence_fileSystem.py  test_FileSequence_offsetFrameNumbers.py  test_Item.py  test_Item_chained_methods.py  test_Item_checkCopy.py  test_Item_checkMove.py  test_Item_checkRename.py  test_Item_fileSystem.py  test_Item_setFrameNumber.py  test_Item_set_padding.py  test_Parser_match_components.py  test_Parser_match_filename.py  test_Parser_parseFilename.py  test_confirmed_bugs.py  test_find_sequences.py  test_jumble_parser.py  test_list_sequence_files.py  test_multiple_sequences.py  test_parser_convert_padding.py  test_sequenceParse_parse_filename.py  test_sequenceParser_find_sequences.py  test_sequenceParser_list_sequence_files.py  test_sequence_parser.py  test_suffix_parsing.py
tests/FileSequence/: coverage.xml  set_padding_to.py  set_padding_to_virtual.py  test_actual_frame_count.py  test_check_copy.py  test_check_move.py  test_check_rename.py  test_copy_to.py  test_copy_to_conflict_detection.py  test_copy_to_virtual.py  test_delete_files_safety.py  test_directory.py  test_existing_missing_frames.py  test_exists.py  test_file_extensions_with_digits.py  test_find_sequences_in_filename_list.py  test_find_sequences_in_path.py  test_first_last_frame.py  test_folderize.py  test_folderize_virual.py  test_match_components_in_filename_list.py  test_move_conflict_detection.py  test_move_to.py  test_move_to_virtual.py  test_offset_frames.py  test_offset_frames_collision_detection.py  test_offset_frames_virtual.py  test_padding.py  test_parse_challenging_file_list.py  test_parse_sequence_with_padding_conversion.py  test_parse_similar_sequences_with_different_padding.py  test_parsing_with_padding_conversion.py  test_prefix_extension_delimiter_suffix.py  test_problems.py  test_rename_conflict_detection.py  test_sequence_builder.py  test_sequence_string.py
tests/FileSequence_test_cases/: 1.yaml
tests/Item/: test_check_copy.py  test_check_move.py  test_check_rename.py  test_copy_to.py  test_delete.py  test_frame_number.py  test_item_check_copy.py  test_item_check_copy_to.py  test_item_check_move.py  test_item_check_move_to.py  test_item_check_rename.py  test_item_copy_to.py  test_item_copy_to_conflict_detection.py  test_item_copy_to_virtual.py  test_item_delete.py  test_item_frame_number.py  test_item_from_components.py  test_item_from_file_name.py  test_item_from_path.py  test_item_manual_creation.py  test_item_move_to.py  test_item_move_to_virtual.py  test_item_rename_to.py  test_item_rename_to_virtual.py  test_item_set_padding.py  test_item_set_padding_virtual.py  test_item_update_frame_number.py  test_item_update_frame_number_virtual.py  test_move_to.py  test_rename_to.py  test_set_frame_number.py
tests/ItemParser/: test_padding_converter.py
tests/Item_test_cases/: 1.yaml  2.yaml
tests/SequenceParser/: test_allowed_extensions.py  test_rogues.py
tests/test_data/: item_TestData.yaml  jumble_similars.yaml  sequences_delimiters_and_suffixes.yaml  sequences_general.yaml  sequences_missing_frames.yaml  sequences_mixed_file_types_and_ranges.yaml
tests_bak/: conftest.py  test_FileSequence.py  test_FileSequence_fileSystem.py  test_FileSequence_offsetFrameNumbers.py  test_Item.py  test_Item_chained_methods.py  test_Item_checkCopy.py  test_Item_checkMove.py  test_Item_checkRename.py  test_Item_fileSystem.py  test_Item_setFrameNumber.py  test_Item_set_padding.py  test_Parser_match_components.py  test_Parser_match_filename.py  test_Parser_parseFilename.py  test_multiple_sequences.py  test_parser_convert_padding.py  test_suffix_parsing.py
(+13 files in other folders)
