[tool.poetry]
name = "pysequitur"
version = "0.1.0"
description = ""
authors = ["arcadeperfect <alexander.harding@gmail.com>"]
readme = "README.md"
packages = [{include = "pysequitur", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
docformatter = "^1.7.5"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pyyaml = "^6.0.2"
mypy = "^1.0"
black = "^24.10.0"
flake8 = "^7.0.0"  # Moved to correct section
pylint = "^3.1.0"
isort = "^5.13.2"
docformatter = "^1.7.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# [tool.poetry.scripts]
# pysequitur = "pysequitur.main:main"
# lint = "pylint src/pysequitur"
# format = "black src/pysequitur"
# typecheck = "mypy src/pysequitur"
# sort-imports = "isort src/pysequitur"
# check = "flake8 src/pysequitur"

# Tool configurations
[tool.black]
line-length = 79
target-version = ['py312']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 79

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.pylint.messages_control]
disable = [
    "C0111",  # missing-docstring
    "C0103",  # invalid-name
    "C0330",  # bad-continuation
    "C0326",  # bad-whitespace
]

[tool.pylint.format]
max-line-length = 88